# camel-workforce-studio

./: .gitignore  CLAUDE.md  README.md  agent.md  pyproject.toml
.claude/: .ralph-loop-workflow.md  ralph-loop-catalog-loop.md  ralph-loop-mvp-v1.md  ralph-loop.local.md
.codex/environments/: environment.toml
.github/workflows/: 1-semi-autonomous-run.yml  2-approve-issue.yml  3-nightly-workforce-run.yml
context/: README.md
context/history/: README.md
context/issue_plans/: 249_trace_snapshot_event_contract.md
context/schemas/: society-output.schema.json  society-output.template.yaml
docs/: ai-fashion-forum-core-breakdown-from-society-backlog.md  ai-fashion-forum-readiness-scorecard.md  issue-201-execution-plan.md  issue-thread-continuation-memory-design.md  iteration-log.md  project-history-and-playbook.md  rfc-topic-selection-and-slice-gating.md  semi-autonomous-mode.md  shared-memory-evaluation.md  society-output-schema.md  source-repo-read-only-policy.md  topic-catalog.md  workforce-handoff-contract.md
scripts/context-builder/: build_context.py
scripts/pipeline/: auto_workflow.py  loop_workflow.py  run_studio.py  source_policy.py
scripts/requirement-debate/: bridge_debate.py  commitment_debate.py  commitment_roles.yaml  core_debate.py  core_roles.yaml  debate.py  operator_debate.py  operator_roles.yaml  requirements.txt  roles.yaml  society_debate.py  society_roles.yaml  ux_debate.py  ux_roles.yaml  workforce_artifacts.py
